# seam-carving

./: CMakeLists.txt  main.cpp  readme.md
src/: app.cpp  app.h  canvas.cpp  canvas.h  error.cpp  error.h  image.cpp  image.h  main.cpp  observer.h  saveHandler.cpp  saveHandler.h
